# TaskForge

./: .gitignore  .gitmodules  README.md  build-server.sh  build-worker.sh  go.mod  go.sum
.github/workflows/: go-test.yml
cmd/TaskForge-Server/: main.go
cmd/server/: main.go
config/: server.yml  worker.json
examples/: request.json
internal/api/: handlers.go  routes.go
internal/console/: console.go
internal/heap/: heap.go  heap_test.go
internal/job/: job.go
internal/queue/: queue.go  queue_test.go
internal/registry/: auth.go  auth_test.go  workers.go
internal/scheduler/: scheduler.go
web/: index.html
web/css/: styles.css
web/js/: api.js  jobs.js
worker/: .clang-format  CMakeLists.txt  generate-makefile.sh  vcpkg.json
worker/src/: main.cpp
worker/src/api/: client.cpp  client.hpp
worker/src/auth/: signer.cpp  signer.hpp
worker/src/jobs/: heartbeat.cpp  heartbeat.hpp
worker/src/logger/: logger.cpp  logger.hpp
